--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .flaskenv
 *.pyc
 *.pyo
-env/
+venv/
 env*
 dist/
 build/
@@ -17,7 +17,7 @@ _mailinglist
 docs/_build/
 __pycache__
 .env_file
-
+secret
 # Coverage reports
 htmlcov/
 .coverage
